# API-chat-real-time

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
chat/: asgi.py  settings.py  urls.py
chatapp/: consumers.py  models.py  permissions.py  routing.py  serializers.py  urls.py  views.py
chatapp/migrations/: 0001_initial.py  0002_alter_customuser_managers_customuser_username.py
chatapp/tests/: conftest.py  tests_views.py
